# webshelf

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Cargo.toml  DEPLOYMENT.md  Dockerfile  Dockerfile.server  Dockerfile.web  README.md  README.zh-CN.md  config.toml.example  docker-compose.replicas.yml  docker-compose.yml  review_prompt.md
.github/workflows/: webshelf.yaml  webshelf.yml
app/: AGENTS.md
app/client-api/: Cargo.toml
app/client-api/src/: client.rs  config.rs  error.rs  lib.rs  types.rs
app/client-api/tests/: auth_test.rs  error_handling_test.rs  health_test.rs  password_reset_test.rs  self_service_test.rs  user_admin_test.rs
app/client-api/tests/common/: mod.rs
app/desktop/: Cargo.toml
app/desktop/src/: main.rs
app/mobile/: Cargo.toml
app/mobile/src/: main.rs
app/ui/: Cargo.toml  DESIGN.md  prototype.html
app/ui/assets/styling/: app_shell.css  auth_form.css  badge.css  button.css  code_console.css  data_table.css  language_switcher.css  modal.css  route_card.css  sidebar.css  stats_card.css  text_input.css  toast.css  tokens.css  top_header.css
app/ui/src/: app_shell.rs  auth_form.rs  badge.rs  button.rs  code_console.rs  data_table.rs  global_styles.rs  language_switcher.rs  lib.rs  modal.rs  route_card.rs  sidebar.rs  stats_card.rs  text_input.rs  toast.rs  top_header.rs
app/web/: Cargo.toml  Dioxus.toml
app/web/assets/: main.css  settings.css
app/web/assets/components/: confirm_dialog.css
app/web/assets/styling/: login_landing.css  verify_email.css
app/web/src/: balance.rs  main.rs
app/web/src/api/: client.rs  mod.rs
app/web/src/auth/: jwt.rs  mod.rs  state.rs  storage.rs
app/web/src/components/: app_shell_layout.rs  confirm_dialog.rs  log_bus.rs  mod.rs  require_admin.rs  require_auth.rs  token_expiry_guard.rs
app/web/src/views/: auth.rs  blog.rs  dashboard.rs  forgot_password.rs  login_landing.rs  mod.rs  not_found.rs  reset_password.rs  settings.rs  users.rs  verify_email.rs
app/web/tests/: frontend_test.rs  login_auth_test.rs
crates/distributed-ratelimit/: Cargo.toml
crates/distributed-ratelimit/src/: config.rs  error.rs  lib.rs  limiter.rs
crates/emailserver/: Cargo.toml
crates/emailserver/src/: lib.rs
crates/i18n/: Cargo.toml
crates/i18n/src/: context.rs  language.rs  lib.rs  tf.rs  translate.rs  translate_fields.rs  translations.rs
crates/webshelf-axum/: Cargo.toml
crates/webshelf-axum/src/: lib.rs  middleware.rs  path_params.rs  request.rs  route.rs  runtime.rs
crates/webshelf-runtime/: Cargo.toml
crates/webshelf-runtime/src/: auth.rs  error.rs  lib.rs  middleware.rs  rate_limit.rs  request.rs  response.rs  runtime.rs  signal.rs
crates/webshelf-salvo/: Cargo.toml
crates/webshelf-salvo/src/: handler.rs  lib.rs  middleware.rs  render_response.rs  request.rs  route.rs  router.rs  runtime.rs
crates/wechat-api/: Cargo.toml  README.md
crates/wechat-api/src/: callback.rs  captcha.rs  client.rs  config.rs  crypto.rs  error.rs  handler.rs  lib.rs  login.rs  message.rs  store.rs
docs/: architecture.md  deployment.md  development.md
k8s/: configmap.yaml  configmap.yml  ingress.yaml  ingress.yml  namespace.yml  postgres-cluster.yml  postgres.yaml  postgres.yml  redis.yaml  redis.yml  secret.yaml.example  secret.yml.example  webshelf-web.yml  webshelf.yaml  webshelf.yml
migrations/: 001_create_users_table.sql
nginx/: default.conf
server/: Cargo.toml
server/migrations/: 001_init.sql
server/src/: bootstrap.rs  lib.rs  main.rs  migrations.rs
server/src/bootstrap/: axum.rs  mod.rs  salvo.rs
server/src/handlers/: api.rs  auth.rs  helpers.rs  mod.rs  wechat.rs
server/src/middlewares/: auth.rs  mod.rs  panic.rs  ratelimit.rs
server/src/repositories/: mod.rs  refresh_token.rs  snowflake_worker.rs  user.rs
server/src/routes/: api.rs  auth.rs  helpers.rs  mod.rs
server/src/services/: auth.rs  cache.rs  lock.rs  mod.rs  password_reset.rs  user.rs  verification.rs  wechat.rs
server/src/utils/: config.rs  db_router.rs  error.rs  extractor.rs  jwt.rs  logger.rs  mod.rs  snowflake.rs  validator.rs
server/tests/: axum_integration_tests.rs  axum_logout_all_test.rs  axum_ratelimit_test.rs  axum_wechat_tests.rs  integration_tests.rs  logout_all_test.rs  ratelimit_integration_test.rs  replica_circuit_breaker_test.rs  salvo_integration_tests.rs  salvo_logout_all_test.rs  salvo_ratelimit_test.rs
server/tests/common/: axum.rs  mod.rs  salvo.rs
src/: bootstrap.rs  lib.rs  main.rs  migrations.rs
src/handlers/: api.rs  auth.rs  mod.rs
src/middleware/: auth.rs  mod.rs  panic.rs
src/middlewares/: auth.rs  mod.rs  panic.rs
src/repositories/: mod.rs  user.rs
src/routes/: api.rs  auth.rs
src/services/: auth.rs  lock.rs  mod.rs  user.rs
src/utils/: common.rs  config.rs  error.rs  logger.rs  mod.rs  password.rs  validator.rs
tests/: integration_tests.rs
web/: Cargo.toml  Dioxus.toml
web/src/: main.rs
