[workspace]
members = ["server", "app/ui", "app/web", "app/desktop", "app/mobile", "app/client-api"]
# resolver = "3" is required for Rust edition 2024
# Minimum Rust version: 1.92+
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
authors = [
    "aiqubits <aiqubits@hotmail.com>",
]
license = "MIT"
repository = "https://github.com/aiqubits/webshelf"
homepage = "https://www.openpick.org/webshelf"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

# Frontend
dioxus = { version = "0.7.1" }

# Frontend workspace
ui = { path = "app/ui" }

# ── WASM 体积优化 ──────────────────────────────────────
[profile.release]
opt-level = "z"       # 最小体积优化
lto = true             # 跨 crate 链接时优化，消除死代码
codegen-units = 1      # 最大优化机会（牺牲编译速度）
strip = true           # 移除调试符号
panic = "abort"        # 减少 panic 展开代码
