[package]
name = "webshelf-web"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
dioxus = { version = "0.7.9", features = ["web", "router"] }

# Shared workspace dependencies
serde.workspace = true
serde_json.workspace = true
