[package]
name = "web"
version = "0.1.0"
edition.workspace = true

[dependencies]
dioxus = { workspace = true, features = ["router"] }
ui = { workspace = true }
client-api = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
base64 = "0.22"
serde = { workspace = true }
serde_json = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["Window", "Storage"] }
js-sys = "0.3"
uuid = { version = "1", features = ["v4", "serde", "js"] }
gloo-timers = { version = "0.3", features = ["futures"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["time"] }

[features]
default = ["web"]
web = ["dioxus/web"]
