[package]
name = "web"
version = "0.1.0"
edition.workspace = true

[dependencies]
dioxus = { workspace = true, features = ["router"] }
ui = { workspace = true }
dioxus-icons = { workspace = true }
client-api = { workspace = true }
chrono = { workspace = true }
base64 = "0.22"
serde = { workspace = true }
serde_json = { workspace = true }
# i18n crate — 仅使用 Language 枚举（无需 dioxus feature；I18nContext 通过 ui 的 re-export 间接获取）
i18n = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["Window", "Navigator", "Storage", "Document", "HtmlDocument", "console"] }
js-sys = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["time"] }

[features]
default = ["web"]
web = ["dioxus/web"]
