[package]
name = "i18n"
version = "0.1.0"
edition.workspace = true
description = "Compile-time internationalization (i18n) for Dioxus applications using Rust macros"
license.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
default = []
dioxus = ["dep:dioxus"]

[dependencies]
dioxus = { version = "0.7", optional = true, default-features = false, features = [
    "hooks", "macro", "signals",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = [
    "Window", "Storage", "console",
] }

[dev-dependencies]
dioxus = { version = "0.7", features = ["hooks", "macro", "signals"] }
