[package]
name = "webshelf-axum"
version.workspace = true
edition.workspace = true

[dependencies]
webshelf-runtime = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
tower = { workspace = true }
http-body-util = { workspace = true }
anyhow.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["rt", "signal", "net"] }
