[package]
name = "webshelf-axum"
version.workspace = true
edition.workspace = true

[dependencies]
webshelf-runtime = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
http-body-util = { workspace = true }
anyhow.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["rt", "signal", "net"] }
serde.workspace = true
serde_json.workspace = true
serde_urlencoded.workspace = true
bytes.workspace = true
http.workspace = true
cookie.workspace = true
percent-encoding.workspace = true
